# interest-rate-derivatives-engine

./: .env.example  .gitignore  IRD_Pricing_Engine_Project_Plan.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
notebooks/: README.md
results/: backtest_report.txt  bootstrapped_curve.csv  curve_history.csv  curve_metrics.txt  hw_calibration.txt  mc_pricing.txt  metrics.txt  phase1_metrics.txt  risk_report.txt  stress_report.txt
src/ird/: __init__.py  config.py  logging_config.py
src/ird/backtest/: __init__.py  delta_hedger.py  metrics.py
src/ird/core/: __init__.py  conventions.py  curve_date.py  vol_surface.py
src/ird/curve/: __init__.py  bootstrapper.py  interpolation.py  nss_fitter.py  zero_curve.py
src/ird/data/: __init__.py  fetch_sofr.py  storage.py  synthetic.py  validation.py
src/ird/greeks/: __init__.py  curve_bumps.py  risk.py
src/ird/mc/: __init__.py  _qmc.py  engine.py
src/ird/models/: __init__.py  calibration.py  hull_white.py  vasicek.py
src/ird/stress/: __init__.py  historical_scenarios.py  scenarios.py  var_cvar.py
tests/: conftest.py  test_backtest.py  test_conventions.py  test_core_types.py  test_curve.py  test_greeks.py  test_mc.py  test_models.py  test_pipeline.py  test_stress.py  test_validation.py
