[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ird-pricing-engine"
version = "0.1.0"
description = "Yield curve construction, short-rate model calibration, and Monte Carlo swaption pricing engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daksh Kumar" }]
keywords = [
    "fixed-income", "interest-rate-derivatives", "yield-curve", "SOFR",
    "Hull-White", "Vasicek", "swaption", "Monte-Carlo", "quantitative-finance",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyarrow>=14.0",
    "requests>=2.31",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs",
    "types-requests",
]

[project.scripts]
ird-fetch = "ird.data.fetch_sofr:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that hit the live FRED API",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["N803", "N806"]  # allow math-style variable names (e.g., P, T, dW)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
packages = ["ird"]
mypy_path = "src"
